add new lectures

--- a/5_homework.tex
+++ b/5_homework.tex
@@ -4,7 +4,7 @@
 \usepackage{amsmath}
 
 \begin{document}
-\noindent Количественные финансы, осень 2025\hfill Семинар 5\\
+\noindent Количественные финансы, осень 2025\hfill Домашнее задание 5\\
 \today
 
 \hrulefill
@@ -19,6 +19,34 @@
     $$
         \Phi(S_T^1, S_T^2) = (S_T^1 - S_T^2)^+
     $$
+\end{problem}
+
+\begin{problem}[Формула Дюпира]
+    На пятой лекции мы показали, что если определить функцию локальной волатильности по формуле ниже, то цены опционов в модели локальной волатильности будут совпадать с рыночными ценами.
+    $$
+            \sigma^2_{Dup}(T, K) = \dfrac{\frac{\partial C^M}{\partial T} + r K \frac{\partial C^M}{\partial K}}
+            {K^2 \frac{\partial^2 C^M}{\partial K^2}}
+    $$Докажите, что для безабритражных рыночных цен колл-опционов $C^M(T, K)$ данное определение корректно, т.е. что величина справа неотрицательная. 
+\end{problem}
+
+\begin{problem}[Американский опцион]
+    Пусть динамика активов в риск-нейтральной мере задаётся уравнениями (модель Блэка-Шоулза)
+    \begin{align*}
+        &dB_t = r B_t dt \\
+        &dS_t/S_t = r dt + \sigma dW_t
+    \end{align*}где $W_t$ -- броуновское движение. 
+    Рассмотрим вечный американский колл-опцион $T=\infty$:
+    $$
+        V(s) = \sup_{\tau \in \mathcal{T}} \E e^{-r\tau} (S_{\tau} - K)^+
+    $$где супремум берётся по всем марковским моментам $\mathcal{T}$, $S_0 = s$.
+    \noindent
+    Рассмотрим стратегию, при которой мы исполняем опцион при достижении цены уровня $L \geq K$:
+    $$
+        \tau_L = \inf \{t \geq 0 : S_t \geq L\}
+    $$Найти стоимость опциона для такой стратегии:
+    $$
+        V_L(s) = \E e^{-r\tau_L} (S_{\tau_L} - K)^+
+    $$При каком $L$ достигается максимум цены?
 \end{problem}
 
 \end{document}
